@@ -8,9 +8,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
 import xyz.erupt.annotation.EruptField;
-import xyz.erupt.annotation.SceneEnum;
 import xyz.erupt.annotation.config.QueryExpression;
 import xyz.erupt.annotation.constant.AnnotationConst;
+import xyz.erupt.annotation.constant.SceneEnum;
+import xyz.erupt.annotation.exception.EruptException;
 import xyz.erupt.annotation.fun.AttachmentProxy;
 import xyz.erupt.annotation.fun.VLModel;
 import xyz.erupt.annotation.query.Condition;
@@ -18,7 +19,7 @@ import xyz.erupt.annotation.sub_field.Edit;
 import xyz.erupt.annotation.sub_field.EditType;
 import xyz.erupt.annotation.sub_field.EditTypeSearch;
 import xyz.erupt.annotation.sub_field.View;
-import xyz.erupt.annotation.sub_field.sub_edit.ChoiceType;
+import xyz.erupt.annotation.sub_field.sub_edit.Dynamic;
 import xyz.erupt.annotation.sub_field.sub_edit.ReferenceTableType;
 import xyz.erupt.annotation.sub_field.sub_edit.ReferenceTreeType;
 import xyz.erupt.annotation.sub_field.sub_edit.TagsType;
@@ -27,20 +28,21 @@ import xyz.erupt.core.config.GsonFactory;
 import xyz.erupt.core.constant.EruptConst;
 import xyz.erupt.core.exception.EruptApiErrorTip;
 import xyz.erupt.core.i18n.I18nTranslate;
+import xyz.erupt.core.invoke.DataProxyInvoke;
 import xyz.erupt.core.proxy.AnnotationProcess;
 import xyz.erupt.core.service.EruptApplication;
 import xyz.erupt.core.service.EruptCoreService;
 import xyz.erupt.core.view.EruptApiModel;
 import xyz.erupt.core.view.EruptFieldModel;
 import xyz.erupt.core.view.EruptModel;
+import xyz.erupt.linq.lambda.LambdaSee;
 
 import java.lang.reflect.Field;
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -50,9 +52,13 @@ import java.util.stream.Stream;
 @Slf4j
 public class EruptUtil {
 
-    //将object中erupt标识的字段抽取出来放到map中
+    // Extract the field marked as "erupt" from the "object" and place it into the "map".
+
+    /**
+     * @param valueMapping 是否映射为真实值
+     */
     @SneakyThrows
-    public static Map<String, Object> generateEruptDataMap(EruptModel eruptModel, Object obj) {
+    public static Map<String, Object> generateEruptDataMap(EruptModel eruptModel, Object obj, boolean valueMapping) {
         Map<String, Object> map = new HashMap<>();
         for (EruptFieldModel fieldModel : eruptModel.getEruptFieldModels()) {
             if (AnnotationConst.EMPTY_STR.equals(fieldModel.getEruptField().edit().title()) &&
@@ -65,6 +71,14 @@ public class EruptUtil {
             if (null != value) {
                 EruptField eruptField = fieldModel.getEruptField();
                 switch (eruptField.edit().type()) {
+                    case NUMBER:
+                        Number val = (Number) value;
+                        if (val.doubleValue() > GsonFactory.JS_MAX_NUMBER || val.doubleValue() < GsonFactory.JS_MIN_NUMBER) {
+                            map.put(field.getName(), val.toString());
+                        } else {
+                            map.put(field.getName(), value);
+                        }
+                        break;
                     case REFERENCE_TREE:
                     case REFERENCE_TABLE:
                         String id;
@@ -93,12 +107,11 @@ public class EruptUtil {
                             Object columnValue = ReflectUtil.findFieldChain(view.column(), value);
                             referMap.put(columnKey, columnValue);
                             map.put(field.getName() + "_" + columnKey, columnValue);
-
                         }
                         map.put(field.getName(), referMap);
                         break;
                     case COMBINE:
-                        map.put(field.getName(), generateEruptDataMap(EruptCoreService.getErupt(fieldModel.getFieldReturnName()), value));
+                        map.put(field.getName(), generateEruptDataMap(EruptCoreService.getErupt(fieldModel.getFieldReturnName()), value, valueMapping));
                         break;
                     case CHECKBOX:
                     case TAB_TREE:
@@ -120,16 +133,27 @@ public class EruptUtil {
                         Collection<?> collectionRef = (Collection<?>) value;
                         List<Object> list = new ArrayList<>();
                         for (Object o : collectionRef) {
-                            list.add(generateEruptDataMap(tabEruptModelRef, o));
+                            list.add(generateEruptDataMap(tabEruptModelRef, o, valueMapping));
                         }
                         map.put(field.getName(), list);
                         break;
+                    case CHOICE:
+                        if (valueMapping) {
+                            Map<String, String> kv = EruptUtil.getChoiceMap(eruptModel, eruptField.edit());
+                            if (kv.containsKey(value.toString())) {
+                                map.put(field.getName(), kv.get(value.toString()));
+                            } else {
+                                map.put(field.getName(), value);
+                            }
+                            break;
+                        }
                     default:
-                        if (fieldModel.getField().getType() == Long.class ||
-                                fieldModel.getField().getType() == Float.class ||
-                                fieldModel.getField().getType() == Double.class ||
-                                fieldModel.getField().getType() == BigDecimal.class) {
-                            map.put(field.getName(), value.toString());
+                        if (value instanceof Date d) {
+                            map.put(field.getName(), DateUtil.getFormatDate(d, DateUtil.ISO_8601));
+                        } else if (value instanceof LocalDate ld) {
+                            map.put(field.getName(), ld.format(DateTimeFormatter.ISO_LOCAL_DATE));
+                        } else if (value instanceof LocalDateTime ldt) {
+                            map.put(field.getName(), ldt.format(DateTimeFormatter.ISO_LOCAL_DATE_TIME));
                         } else {
                             map.put(field.getName(), value);
                         }
@@ -140,16 +164,45 @@ public class EruptUtil {
         return map;
     }
 
-    public static Map<String, String> getChoiceMap(EruptModel eruptModel, ChoiceType choiceType) {
+    @SneakyThrows
+    public static Map<String, Object> generateEruptDataViewMap(EruptModel eruptModel, Object obj) {
+        return null;
+    }
+
+    public static Map<String, String> getChoiceMap(EruptModel eruptModel, Edit edit) {
         Map<String, String> choiceMap = new LinkedHashMap<>();
-        getChoiceList(eruptModel, choiceType).forEach(vl -> choiceMap.put(vl.getValue(), vl.getLabel()));
+        getChoiceList(eruptModel, edit).forEach(vl -> choiceMap.put(vl.getValue(), vl.getLabel()));
         return choiceMap;
     }
 
-    public static List<VLModel> getChoiceList(EruptModel eruptModel, ChoiceType choiceType) {
-        List<VLModel> vls = Stream.of(choiceType.vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).collect(Collectors.toList());
-        Stream.of(choiceType.fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
-                Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetch(choiceType.fetchHandlerParams())).ifPresent(vls::addAll));
+    public static List<VLModel> getChoiceList(EruptModel eruptModel, Edit edit) {
+        List<VLModel> vls = new ArrayList<>();
+        if (edit.type() == EditType.CHOICE) {
+            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.color(), vl.disable())).toList());
+            Stream.of(edit.choiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
+                    Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetch(edit.choiceType().fetchHandlerParams())).ifPresent(vls::addAll));
+        } else if (edit.type() == EditType.MULTI_CHOICE) {
+            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.color(), vl.disable())).toList());
+            Stream.of(edit.multiChoiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
+                    Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetch(edit.multiChoiceType().fetchHandlerParams())).ifPresent(vls::addAll));
+        }
+        if (eruptModel.isI18n()) {
+            vls.forEach(vl -> vl.setLabel(I18nTranslate.$translate(vl.getLabel())));
+        }
+        return vls;
+    }
+
+    public static List<VLModel> getChoiceListFilter(EruptModel eruptModel, Edit edit, Map<String, Object> formData) {
+        List<VLModel> vls = new ArrayList<>();
+        if (edit.type() == EditType.CHOICE) {
+            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.color(), vl.disable())).toList());
+            Stream.of(edit.choiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
+                    Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetchFilter(formData, edit.choiceType().fetchHandlerParams())).ifPresent(vls::addAll));
+        } else if (edit.type() == EditType.MULTI_CHOICE) {
+            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.color(), vl.disable())).toList());
+            Stream.of(edit.multiChoiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
+                    Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetchFilter(formData, edit.multiChoiceType().fetchHandlerParams())).ifPresent(vls::addAll));
+        }
         if (eruptModel.isI18n()) {
             vls.forEach(vl -> vl.setLabel(I18nTranslate.$translate(vl.getLabel())));
         }
@@ -197,7 +250,7 @@ public class EruptUtil {
         }
     }
 
-    //生成一个合法的searchCondition
+    // Generate a valid searchCondition
     public static List<Condition> geneEruptSearchCondition(EruptModel eruptModel, List<Condition> searchCondition) {
         checkEruptSearchNotnull(eruptModel, searchCondition);
         List<Condition> legalConditions = new ArrayList<>();
@@ -211,7 +264,7 @@ public class EruptUtil {
                         if (edit.search().value() && null != condition.getValue()) {
                             if (condition.getValue() instanceof Collection) {
                                 Collection<?> collection = (Collection<?>) condition.getValue();
-                                if (collection.size() == 0) {
+                                if (collection.isEmpty()) {
                                     continue;
                                 }
                             }
@@ -246,7 +299,7 @@ public class EruptUtil {
                     throw new EruptApiErrorTip(EruptApiModel.Status.INFO, edit.title() + " " + I18nTranslate.$translate("erupt.notnull"), EruptApiModel.PromptWay.MESSAGE);
                 }
                 if (condition.getValue() instanceof List) {
-                    if (((List<?>) condition.getValue()).size() == 0) {
+                    if (((List<?>) condition.getValue()).isEmpty()) {
                         throw new EruptApiErrorTip(EruptApiModel.Status.INFO + edit.title() + " " + I18nTranslate.$translate("erupt.notnull"), EruptApiModel.PromptWay.MESSAGE);
                     }
                 }
@@ -258,34 +311,49 @@ public class EruptUtil {
         for (EruptFieldModel field : eruptModel.getEruptFieldModels()) {
             Edit edit = field.getEruptField().edit();
             JsonElement value = jsonObject.get(field.getFieldName());
-            if (field.getEruptField().edit().notNull()) {
+            if (edit.notNull()) {
                 if (null == value || value.isJsonNull()) {
-                    return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.notnull"));
+                    return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
                 } else if (String.class.getSimpleName().equals(field.getFieldReturnName())) {
                     if (StringUtils.isBlank(value.getAsString())) {
-                        return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.notnull"));
+                        return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
                     }
                 }
             }
-            if (field.getEruptField().edit().type() == EditType.COMBINE) {
-                EruptApiModel eam = validateEruptValue(EruptCoreService.getErupt(field.getFieldReturnName()), jsonObject.getAsJsonObject(field.getFieldName()));
-                if (eam.getStatus() == EruptApiModel.Status.ERROR) {
-                    return eam;
+            if (edit.type() == EditType.COMBINE) {
+                JsonObject combine = jsonObject.getAsJsonObject(field.getFieldName());
+                if (null != combine) {
+                    EruptApiModel eam = validateEruptValue(EruptCoreService.getErupt(field.getFieldReturnName()), combine);
+                    if (eam.getStatus() == EruptApiModel.Status.ERROR) {
+                        return eam;
+                    }
                 }
             }
-            if (null != value && !AnnotationConst.EMPTY_STR.equals(edit.title())) {
-                //xss 注入处理
+            if (!AnnotationConst.EMPTY_STR.equals(edit.dynamic().condition())) {
+                if (null == value || value.isJsonNull()) {
+                    Object dependFieldValue = null == jsonObject.get(edit.dynamic().dependField()) ? null : jsonObject.get(edit.dynamic().dependField()).getAsString();
+                    Map<String, Object> vars = new HashMap<>();
+                    vars.put(LambdaSee.field(Dynamic.Var::getValue), dependFieldValue);
+                    boolean dynamic = ScriptUtil.eval("!!(" + edit.dynamic().condition() + ")", vars, boolean.class);
+                    Dynamic.Ctrl strategy = dynamic ? edit.dynamic().match() : edit.dynamic().noMatch();
+                    if (strategy == Dynamic.Ctrl.NOTNULL) {
+                        return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
+                    }
+                }
+            }
+            if (null != value && !value.isJsonNull() && !AnnotationConst.EMPTY_STR.equals(edit.title())) {
+                // XSS Injection Handling
                 if (edit.type() == EditType.TEXTAREA || edit.type() == EditType.INPUT) {
                     if (SecurityUtil.xssInspect(value.getAsString())) {
-                        return EruptApiModel.errorNoInterceptApi(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.attack.xss"));
+                        return EruptApiModel.errorApi(edit.title() + " " + I18nTranslate.$translate("erupt.attack.xss"));
                     }
                 }
-                //数据类型校验
+                // Data type validation
                 switch (edit.type()) {
                     case NUMBER:
                     case SLIDER:
-                        if (!NumberUtils.isCreatable(value.getAsString())) {
-                            return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.must.number"));
+                        if (!NumberUtils.isNumber(value.getAsString())) {
+                            return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.must.number"));
                         }
                         break;
                     case INPUT:
@@ -293,7 +361,7 @@ public class EruptUtil {
                             String content = value.getAsString();
                             if (StringUtils.isNotBlank(content)) {
                                 if (!Pattern.matches(edit.inputType().regex(), content)) {
-                                    return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.incorrect_format"));
+                                    return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.incorrect_format"));
                                 }
                             }
                         }
@@ -301,11 +369,16 @@ public class EruptUtil {
                 }
             }
         }
+        try {
+            DataProxyInvoke.invoke(eruptModel, (dataProxy -> dataProxy.validate(GsonFactory.getGson().fromJson(jsonObject.toString(), eruptModel.getClazz()))));
+        } catch (EruptException e) {
+            return EruptApiModel.errorMessageApi(e.getMessage());
+        }
         return EruptApiModel.successApi();
     }
 
     /**
-     * 前端数据处理逻辑
+     * Front-end data processing logic
      */
     public static void processEruptWebValue(EruptModel eruptModel, JsonObject jsonObject) {
         for (EruptFieldModel field : eruptModel.getEruptFieldModels()) {
@@ -331,7 +404,6 @@ public class EruptUtil {
                         }
                     }
                 }
-                //TODO 密码组件值加密传输后解密
             }
         }
     }
@@ -341,11 +413,14 @@ public class EruptUtil {
         return TypeUtil.typeStrConvertObject(id, primaryField.getType());
     }
 
-    //将对象A的非空数据源覆盖到对象B中
+    // Copy the non-empty data source of object A to object B
     public static Object dataTarget(EruptModel eruptModel, Object data, Object target, SceneEnum sceneEnum) {
         for (EruptFieldModel fieldModel : eruptModel.getEruptFieldModels()) {
             EruptField eruptField = fieldModel.getEruptField();
             boolean readonly = sceneEnum == SceneEnum.EDIT ? eruptField.edit().readonly().edit() : eruptField.edit().readonly().add();
+            if (eruptField.edit().readonly().allowChange()) {
+                readonly = false;
+            }
             if (StringUtils.isNotBlank(eruptField.edit().title()) && !readonly) {
                 Field f = fieldModel.getField();
                 try {
@@ -374,7 +449,7 @@ public class EruptUtil {
         return target;
     }
 
-    //清理序列化后对象所产生的默认值（通过json串进行校验）
+    // Clear the default values generated by serialized objects (verified through JSON strings)
     public static void clearObjectDefaultValueByJson(Object obj, JsonObject data) {
         ReflectUtil.findClassAllFields(obj.getClass(), field -> {
             try {
@@ -391,16 +466,17 @@ public class EruptUtil {
     }
 
     /**
-     * 将JSON串转换为erupt实体对象
+     * Convert the JSON string to an erupt entity object
      *
-     * @param json      json对象
-     * @param extraData 额外填充的反射数据
+     * @param json      JSON object
+     * @param extraData Additional supplementary reflection data
      */
+    @SneakyThrows
     public static Object jsonToEruptEntity(EruptModel eruptModel, JsonObject json, Map<String, Object> extraData) throws InstantiationException, IllegalAccessException {
         Gson gson = GsonFactory.getGson();
         Object o = gson.fromJson(json.toString(), eruptModel.getClazz());
         EruptUtil.clearObjectDefaultValueByJson(o, json);
-        Object obj = EruptUtil.dataTarget(eruptModel, o, eruptModel.getClazz().newInstance(), SceneEnum.ADD);
+        Object obj = EruptUtil.dataTarget(eruptModel, o, eruptModel.getClazz().getDeclaredConstructor().newInstance(), SceneEnum.ADD);
         if (null != extraData) {
             for (String key : extraData.keySet()) {
                 Field field = ReflectUtil.findClassField(eruptModel.getClazz(), key);
@@ -412,7 +488,7 @@ public class EruptUtil {
     }
 
     /**
-     * 获取附件上传代理器
+     * Obtain the attachment upload proxy.
      *
      * @return AttachmentProxy
      */
@@ -421,7 +497,7 @@ public class EruptUtil {
         return null == eruptAttachmentUpload ? null : EruptSpringUtil.getBean(eruptAttachmentUpload.value());
     }
 
-    //是否为时间字段
+    // Is it a time field?
     public static boolean isDateField(String fieldType) {
         if (Date.class.getSimpleName().equals(fieldType)) {
             return true;
